# UnoAlgorithms

./: .gitignore  CMakeLists.txt  README.md  game_log.txt
include/: card.h  deck.h  game.h  player.h  renderer.h  strategy.h
src/: card.cpp  deck.cpp  game.cpp  main.cpp  player.cpp  renderer.cpp  strategy.cpp
test/: card_tests.cpp
